CREATE TABLE IF NOT EXISTS users (
  id INT AUTO_INCREMENT PRIMARY KEY,
  name VARCHAR(255) NOT NULL,
  email VARCHAR(255) NOT NULL UNIQUE,
  password VARCHAR(255) NOT NULL,
  level VARCHAR(120) DEFAULT 'Student',
  role VARCHAR(50) DEFAULT 'student',
  status VARCHAR(30) DEFAULT 'active',
  avatar_url VARCHAR(255) NULL,
  last_seen DATETIME NULL,
  reset_token_hash VARCHAR(255) NULL,
  reset_token_expires_at DATETIME NULL,
  created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
  updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
  INDEX idx_users_role (role),
  INDEX idx_users_status (status)
);

CREATE TABLE IF NOT EXISTS quiz_results (
  id INT AUTO_INCREMENT PRIMARY KEY,
  user_id INT NULL,
  student_email VARCHAR(255) NULL,
  user_email VARCHAR(255) NULL,
  student_name VARCHAR(255) NULL,
  category VARCHAR(100) NULL,
  teacher_id VARCHAR(100) NULL,
  teacher_name VARCHAR(255) NULL,
  teacher_email VARCHAR(255) NULL,
  teacher_subject VARCHAR(100) NULL,
  difficulty VARCHAR(50) NULL,
  total_questions INT NOT NULL,
  score INT NOT NULL,
  correct_count INT DEFAULT 0,
  incorrect_count INT DEFAULT 0,
  percentage DECIMAL(5,2) NOT NULL,
  time_spent_seconds INT DEFAULT 0,
  feedback TEXT NULL,
  details LONGTEXT NULL,
  questions_json LONGTEXT NULL,
  answers_json LONGTEXT NULL,
  corrections_json LONGTEXT NULL,
  created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
  INDEX idx_quiz_results_user_id (user_id),
  INDEX idx_quiz_results_user_email (user_email),
  INDEX idx_quiz_results_created_at (created_at)
);
